/*
 * The `auth' service provides information on the validity,
 * expiration time, and user ID associated with a 'token'
 */

syntax = "proto3";

import "common.proto";

option java_multiple_files = true;
option java_package = "com.dstsytems.auth";
option java_outer_classname = "AuthVerifier";

package service;

import "google/api/annotations.proto";

// The greeting service definition.
service AuthVerifier {
 // verify a token
 rpc VerifyToken (VerificationRequest) returns (VerificationResponse) {
 option (google.api.http) = {
    get: "/api/v1/token/{token}"
  };
 }
}

// The request message containing the user's name.
message VerificationRequest {
  CommonRequest common = 1;
  string token = 10;
}

// The response message containing the greetings
message VerificationResponse {
  CommonResponse common = 1;
  bool valid = 10;
  string userID = 11;
  int64 cacheExpiration = 12;
}
